Fix negative animation duration without capture on click support

BUG: 495216


(cherry picked from commit e48ac485c66b5a4d6f1b1502af5b6e18a673901d)

Co-authored-by: Noah Davis <noahadvs@gmail.com>